win32ss/dwm/milcore/include/Generated/wgx_commands.h

typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    HMIL_RESOURCE htransform;
    HMIL_RESOURCE hgeometry;
    HMIL_RESOURCE hmaterial;
    HMIL_RESOURCE hbackMaterial;
} MILCMD_GEOMETRYMODEL3D;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    UINT32 PositionsSize;
    UINT32 NormalsSize;
    UINT32 TextureCoordinatesSize;
    UINT32 TriangleIndicesSize;
} MILCMD_MESHGEOMETRY3D;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    UINT32 ChildrenSize;
} MILCMD_MATERIALGROUP;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    MilColorF color;
    MilColorF ambientColor;
    HMIL_RESOURCE hbrush;
} MILCMD_DIFFUSEMATERIAL;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    MilColorF color;
    DOUBLE specularPower;
    HMIL_RESOURCE hbrush;
} MILCMD_SPECULARMATERIAL;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    MilColorF color;
    HMIL_RESOURCE hbrush;
} MILCMD_EMISSIVEMATERIAL;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    UINT32 ChildrenSize;
} MILCMD_TRANSFORM3DGROUP;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE offsetX;
    DOUBLE offsetY;
    DOUBLE offsetZ;
    HMIL_RESOURCE hOffsetXAnimations;
    HMIL_RESOURCE hOffsetYAnimations;
    HMIL_RESOURCE hOffsetZAnimations;
} MILCMD_TRANSLATETRANSFORM3D;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE scaleX;
    DOUBLE scaleY;
    DOUBLE scaleZ;
    DOUBLE centerX;
    DOUBLE centerY;
    DOUBLE centerZ;
    HMIL_RESOURCE hScaleXAnimations;
    HMIL_RESOURCE hScaleYAnimations;
    HMIL_RESOURCE hScaleZAnimations;
    HMIL_RESOURCE hCenterXAnimations;
    HMIL_RESOURCE hCenterYAnimations;
    HMIL_RESOURCE hCenterZAnimations;
} MILCMD_SCALETRANSFORM3D;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE centerX;
    DOUBLE centerY;
    DOUBLE centerZ;
    HMIL_RESOURCE hCenterXAnimations;
    HMIL_RESOURCE hCenterYAnimations;
    HMIL_RESOURCE hCenterZAnimations;
    HMIL_RESOURCE hrotation;
} MILCMD_ROTATETRANSFORM3D;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    D3DMATRIX matrix;
} MILCMD_MATRIXTRANSFORM3D;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    ShaderEffectShaderRenderMode::Enum ShaderRenderMode;
    UINT32 PixelShaderBytecodeSize;
    BOOL CompileSoftwareShader;
} MILCMD_PIXELSHADER;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE Opacity;
    HMIL_RESOURCE hOpacityAnimations;
    HMIL_RESOURCE hTransform;
    HMIL_RESOURCE hRelativeTransform;
} MILCMD_IMPLICITINPUTBRUSH;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE Radius;
    HMIL_RESOURCE hRadiusAnimations;
    MilKernelType::Enum KernelType;
    MilEffectRenderingBias::Enum RenderingBias;
} MILCMD_BLUREFFECT;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE ShadowDepth;
    MilColorF Color;
    DOUBLE Direction;
    DOUBLE Opacity;
    DOUBLE BlurRadius;
    HMIL_RESOURCE hShadowDepthAnimations;
    HMIL_RESOURCE hColorAnimations;
    HMIL_RESOURCE hDirectionAnimations;
    HMIL_RESOURCE hOpacityAnimations;
    HMIL_RESOURCE hBlurRadiusAnimations;
    MilEffectRenderingBias::Enum RenderingBias;
} MILCMD_DROPSHADOWEFFECT;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE TopPadding;
    DOUBLE BottomPadding;
    DOUBLE LeftPadding;
    DOUBLE RightPadding;
    HMIL_RESOURCE hPixelShader;
    INT DdxUvDdyUvRegisterIndex;
    UINT32 ShaderConstantFloatRegistersSize;
    UINT32 DependencyPropertyFloatValuesSize;
    UINT32 ShaderConstantIntRegistersSize;
    UINT32 DependencyPropertyIntValuesSize;
    UINT32 ShaderConstantBoolRegistersSize;
    UINT32 DependencyPropertyBoolValuesSize;
    UINT32 ShaderSamplerRegistrationInfoSize;
    UINT32 DependencyPropertySamplerValuesSize;
} MILCMD_SHADEREFFECT;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    HMIL_RESOURCE hDrawing;
} MILCMD_DRAWINGIMAGE;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    UINT32 ChildrenSize;
} MILCMD_TRANSFORMGROUP;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE X;
    DOUBLE Y;
    HMIL_RESOURCE hXAnimations;
    HMIL_RESOURCE hYAnimations;
} MILCMD_TRANSLATETRANSFORM;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE ScaleX;
    DOUBLE ScaleY;
    DOUBLE CenterX;
    DOUBLE CenterY;
    HMIL_RESOURCE hScaleXAnimations;
    HMIL_RESOURCE hScaleYAnimations;
    HMIL_RESOURCE hCenterXAnimations;
    HMIL_RESOURCE hCenterYAnimations;
} MILCMD_SCALETRANSFORM;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE AngleX;
    DOUBLE AngleY;
    DOUBLE CenterX;
    DOUBLE CenterY;
    HMIL_RESOURCE hAngleXAnimations;
    HMIL_RESOURCE hAngleYAnimations;
    HMIL_RESOURCE hCenterXAnimations;
    HMIL_RESOURCE hCenterYAnimations;
} MILCMD_SKEWTRANSFORM;