win32ss/dwm/milcore/include/Generated/wgx_commands.cs

        [FieldOffset(64)] internal double innerConeAngle;
        [FieldOffset(72)] internal MilPoint3F position;
        [FieldOffset(84)] internal DUCE.ResourceHandle htransform;
        [FieldOffset(88)] internal MilPoint3F direction;
        [FieldOffset(100)] internal DUCE.ResourceHandle hColorAnimations;
        [FieldOffset(104)] internal DUCE.ResourceHandle hPositionAnimations;
        [FieldOffset(108)] internal DUCE.ResourceHandle hRangeAnimations;
        [FieldOffset(112)] internal DUCE.ResourceHandle hConstantAttenuationAnimations;
        [FieldOffset(116)] internal DUCE.ResourceHandle hLinearAttenuationAnimations;
        [FieldOffset(120)] internal DUCE.ResourceHandle hQuadraticAttenuationAnimations;
        [FieldOffset(124)] internal DUCE.ResourceHandle hDirectionAnimations;
        [FieldOffset(128)] internal DUCE.ResourceHandle hOuterConeAngleAnimations;
        [FieldOffset(132)] internal DUCE.ResourceHandle hInnerConeAngleAnimations;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_GEOMETRYMODEL3D
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal DUCE.ResourceHandle htransform;
        [FieldOffset(12)] internal DUCE.ResourceHandle hgeometry;
        [FieldOffset(16)] internal DUCE.ResourceHandle hmaterial;
        [FieldOffset(20)] internal DUCE.ResourceHandle hbackMaterial;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_MESHGEOMETRY3D
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal UInt32 PositionsSize;
        [FieldOffset(12)] internal UInt32 NormalsSize;
        [FieldOffset(16)] internal UInt32 TextureCoordinatesSize;
        [FieldOffset(20)] internal UInt32 TriangleIndicesSize;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_MATERIALGROUP
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal UInt32 ChildrenSize;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_DIFFUSEMATERIAL
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal MilColorF color;
        [FieldOffset(24)] internal MilColorF ambientColor;
        [FieldOffset(40)] internal DUCE.ResourceHandle hbrush;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_SPECULARMATERIAL
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal MilColorF color;
        [FieldOffset(24)] internal double specularPower;
        [FieldOffset(32)] internal DUCE.ResourceHandle hbrush;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_EMISSIVEMATERIAL
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal MilColorF color;
        [FieldOffset(24)] internal DUCE.ResourceHandle hbrush;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_TRANSFORM3DGROUP
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal UInt32 ChildrenSize;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_TRANSLATETRANSFORM3D
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double offsetX;
        [FieldOffset(16)] internal double offsetY;
        [FieldOffset(24)] internal double offsetZ;
        [FieldOffset(32)] internal DUCE.ResourceHandle hOffsetXAnimations;
        [FieldOffset(36)] internal DUCE.ResourceHandle hOffsetYAnimations;
        [FieldOffset(40)] internal DUCE.ResourceHandle hOffsetZAnimations;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_SCALETRANSFORM3D
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double scaleX;
        [FieldOffset(16)] internal double scaleY;
        [FieldOffset(24)] internal double scaleZ;
        [FieldOffset(32)] internal double centerX;
        [FieldOffset(40)] internal double centerY;
        [FieldOffset(48)] internal double centerZ;
        [FieldOffset(56)] internal DUCE.ResourceHandle hScaleXAnimations;
        [FieldOffset(60)] internal DUCE.ResourceHandle hScaleYAnimations;
        [FieldOffset(64)] internal DUCE.ResourceHandle hScaleZAnimations;
        [FieldOffset(68)] internal DUCE.ResourceHandle hCenterXAnimations;
        [FieldOffset(72)] internal DUCE.ResourceHandle hCenterYAnimations;
        [FieldOffset(76)] internal DUCE.ResourceHandle hCenterZAnimations;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_ROTATETRANSFORM3D
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double centerX;
        [FieldOffset(16)] internal double centerY;
        [FieldOffset(24)] internal double centerZ;
        [FieldOffset(32)] internal DUCE.ResourceHandle hCenterXAnimations;
        [FieldOffset(36)] internal DUCE.ResourceHandle hCenterYAnimations;
        [FieldOffset(40)] internal DUCE.ResourceHandle hCenterZAnimations;
        [FieldOffset(44)] internal DUCE.ResourceHandle hrotation;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_MATRIXTRANSFORM3D
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal D3DMATRIX matrix;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_PIXELSHADER
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal ShaderRenderMode ShaderRenderMode;
        [FieldOffset(12)] internal UInt32 PixelShaderBytecodeSize;
        [FieldOffset(16)] internal BOOL CompileSoftwareShader;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_IMPLICITINPUTBRUSH
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double Opacity;
        [FieldOffset(16)] internal DUCE.ResourceHandle hOpacityAnimations;
        [FieldOffset(20)] internal DUCE.ResourceHandle hTransform;
        [FieldOffset(24)] internal DUCE.ResourceHandle hRelativeTransform;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_BLUREFFECT
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double Radius;
        [FieldOffset(16)] internal DUCE.ResourceHandle hRadiusAnimations;
        [FieldOffset(20)] internal KernelType KernelType;
        [FieldOffset(24)] internal RenderingBias RenderingBias;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_DROPSHADOWEFFECT
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double ShadowDepth;
        [FieldOffset(16)] internal MilColorF Color;
        [FieldOffset(32)] internal double Direction;
        [FieldOffset(40)] internal double Opacity;
        [FieldOffset(48)] internal double BlurRadius;
        [FieldOffset(56)] internal DUCE.ResourceHandle hShadowDepthAnimations;
        [FieldOffset(60)] internal DUCE.ResourceHandle hColorAnimations;
        [FieldOffset(64)] internal DUCE.ResourceHandle hDirectionAnimations;
        [FieldOffset(68)] internal DUCE.ResourceHandle hOpacityAnimations;
        [FieldOffset(72)] internal DUCE.ResourceHandle hBlurRadiusAnimations;
        [FieldOffset(76)] internal RenderingBias RenderingBias;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_SHADEREFFECT
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double TopPadding;
        [FieldOffset(16)] internal double BottomPadding;
        [FieldOffset(24)] internal double LeftPadding;
        [FieldOffset(32)] internal double RightPadding;
        [FieldOffset(40)] internal DUCE.ResourceHandle hPixelShader;
        [FieldOffset(44)] internal int DdxUvDdyUvRegisterIndex;
        [FieldOffset(48)] internal UInt32 ShaderConstantFloatRegistersSize;
        [FieldOffset(52)] internal UInt32 DependencyPropertyFloatValuesSize;
        [FieldOffset(56)] internal UInt32 ShaderConstantIntRegistersSize;
        [FieldOffset(60)] internal UInt32 DependencyPropertyIntValuesSize;
        [FieldOffset(64)] internal UInt32 ShaderConstantBoolRegistersSize;
        [FieldOffset(68)] internal UInt32 DependencyPropertyBoolValuesSize;
        [FieldOffset(72)] internal UInt32 ShaderSamplerRegistrationInfoSize;
        [FieldOffset(76)] internal UInt32 DependencyPropertySamplerValuesSize;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_DRAWINGIMAGE
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal DUCE.ResourceHandle hDrawing;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_TRANSFORMGROUP
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal UInt32 ChildrenSize;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_TRANSLATETRANSFORM
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double X;
        [FieldOffset(16)] internal double Y;
        [FieldOffset(24)] internal DUCE.ResourceHandle hXAnimations;
        [FieldOffset(28)] internal DUCE.ResourceHandle hYAnimations;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_SCALETRANSFORM
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double ScaleX;
        [FieldOffset(16)] internal double ScaleY;
        [FieldOffset(24)] internal double CenterX;
        [FieldOffset(32)] internal double CenterY;
        [FieldOffset(40)] internal DUCE.ResourceHandle hScaleXAnimations;
        [FieldOffset(44)] internal DUCE.ResourceHandle hScaleYAnimations;
        [FieldOffset(48)] internal DUCE.ResourceHandle hCenterXAnimations;
        [FieldOffset(52)] internal DUCE.ResourceHandle hCenterYAnimations;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_SKEWTRANSFORM
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double AngleX;
        [FieldOffset(16)] internal double AngleY;
        [FieldOffset(24)] internal double CenterX;
        [FieldOffset(32)] internal double CenterY;
        [FieldOffset(40)] internal DUCE.ResourceHandle hAngleXAnimations;
